@@ -1,7 +1,11 @@
+-------------------------- soilDB 0.9-2 (2012-12-18) ----------------------------
+* new functions for getting / plotting the geographic extent of a soil series, using the SoilWeb query service:
+  -seriesExtent() : fetches extent as a SpatialPolygonDataFrame
+  -seriesExtentAsGmap() : fetches extent and plots on Google Maps (requires dismo package)
+
 -------------------------- soilDB 0.9-1 (2012-11-27) ----------------------------
 * updated functionality in fetchNASIS_component_data() pulls mapunit-level data as well as component-level data
 * Munsell 'value' is now returned from PedonPC/NASIS fetching functions
-
 
 -------------------------- soilDB 0.9 (2012-10-24) ----------------------------
 * added a surface fragment summary "surf_frag_summary" to the results of get_extended_data_from_NASIS()
@@ -10,7 +14,6 @@
   - note: this has not been ported to the related PedonPC queries
 * minor bug-fix in horizon-level rock fragment summary SQL which previously mis-classified BD as ST in some, rare cases
   - note: this has not been ported to the related PedonPC queries
-
 
 -------------------------- soilDB 0.8-3 (2012-09-28) ----------------------------
 * site-level data: {elev, slope, aspect} are now named {elev_field, slope_field, aspect_field}
